[gd_scene load_steps=3 format=2]

[ext_resource path="res://ShopCard.gd" type="Script" id=1]
[ext_resource path="res://assets/shoe.png" type="Texture" id=2]

[node name="ShopCard" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 56.0
rect_min_size = Vector2( 84, 56 )
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="."]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 74.0
text = "Name"
align = 1

[node name="TypeLabel" type="Label" parent="."]
margin_top = 78.0
margin_right = 1024.0
margin_bottom = 92.0
text = "type"
align = 1

[node name="PriceLabel" type="Label" parent="."]
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 110.0
text = "Price"
align = 1

[node name="Description" type="Label" parent="."]
margin_top = 114.0
margin_right = 1024.0
margin_bottom = 128.0
text = "Description"
align = 1

[node name="BuyButton" type="Button" parent="."]
margin_top = 132.0
margin_right = 1024.0
margin_bottom = 152.0
text = "Buy"

[node name="SaveButton" type="Button" parent="."]
margin_top = 156.0
margin_right = 1024.0
margin_bottom = 176.0
text = "Save"
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
